--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>WebCalculator</title>
 </head>
 <body>
+    <h1>Do Some Calculations</h1> 
     <div class = "container">  
     <div class = "calculator">
     <input type="text" placeholder="0" id = "Calc-Output">
